Fixe gap in button filter

--- a/src/app/components/header.component/header.component.scss
+++ b/src/app/components/header.component/header.component.scss
@@ -17,9 +17,10 @@ a:visited {
 }
 
 .category-dropdown {
-  position: relative;
-  display: inline-block;
-  margin: 1rem 0;
+  //position: relative;
+  //display: inline-block;
+  margin-left: 0.3rem;
+
 
   .dropdown-button {
     padding: 0.6rem 1rem;
@@ -35,7 +36,7 @@ a:visited {
     min-width: 9.7rem;
 
     .label {
-    font-weight: 600;
+    font-weight: 500;
     color: #333; // pode ajustar aqui pra mais escuro (#000) ou uma cor azul discreta (#003366)
   }
   }
